Added ResourceNotFoundExceptionTesting